--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header .left {
 }
 
 header .left i {
-    font-size: 1.1em;
+    font-size: 1.2em;
     margin-right: 10px;
     color: var(--color-primary);
 }
@@ -114,9 +114,10 @@ header a.title {
     color: var(--color-blanc);
 }
 
-section#home {
+section#home,
+section#expo {
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -132,7 +133,7 @@ section#home h1 {
     line-height: 70px;
 }
 
-section#home p {
+section#home p.desc {
     color: var(--color-texte);
     font-size: 22px;
     line-height: 28px;
@@ -161,4 +162,111 @@ section#home p {
 section#home .btn {
     margin-top: 48px;
     font-size: 16px;
+}
+
+.ads {
+    display: flex;
+    padding: 12px 20px;
+    height: 48px;
+    align-items: center;
+    justify-content: center;
+    background: var(--color-background);
+    position: relative;
+    margin-bottom: 30px;
+    border-radius: 8px;
+}
+
+.ads::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: linear-gradient(90deg, #C73A55, #952C72);
+    position: absolute;
+    z-index: -1;
+    filter: blur(15px);
+    border-radius: 8px;
+    opacity: .6;
+}
+
+.ads p {
+    white-space: none;
+    font-size: 16px;
+    color: var(--color-blanc);
+    letter-spacing: -.1px;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.ads p i {
+    font-size: 1.3em;
+    color: var(--color-primary);
+    margin-right: 20px;
+}
+
+.ads hr {
+    width: 1px;
+    height: 100%;
+    border: none;
+    outline: none;
+    background-color: #333333;
+    margin-inline: 20px;
+}
+
+.ads a {
+    white-space: none;
+    font-size: 16px;
+    color: var(--color-primary);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 600;
+}
+
+.ads a i {
+    font-size: 1.2em;
+    margin-left: 10px;
+}
+
+section#expo {
+    flex-direction: row;
+    padding-left: 10%;
+}
+
+section#expo h1 {
+    color: var(--color-blanc);
+    font-size: 44px;
+    font-weight: 900;
+    width: 50vw;
+    text-align: left;
+    line-height: 60px;
+}
+
+section#expo p.desc {
+    color: var(--color-texte);
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 500;
+    text-align: left;
+    margin-top: 25px;
+}
+
+section#expo p.desc span {
+    color: var(--color-blanc);
+    text-transform: capitalize;
+    margin-right: 5px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+section#expo .rectangle {
+    height: 700px;
+    width: 52vw;
 }
