--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@ section#expo,
 section#personnel,
 section#avis,
 section#faq,
-section#contact {
+section#contact,
+section#billeterie {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -314,7 +315,7 @@ section#personnel h1 {
     font-size: 44px;
     font-weight: 900;
     line-height: 65px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 
 section#personnel .grid {
@@ -644,4 +645,64 @@ section#contact form .content input.btn {
 
 section#contact form .content input.btn:hover {
     background-color: #ffffff10;
+}
+
+section#billeterie {
+    background-color: var(--color-background2);
+}
+
+section#billeterie h1 {
+    color: var(--color-blanc);
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 55px;
+    text-align: center;
+}
+
+section#billeterie .billet {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 25px;
+    justify-items: center;
+    align-items: center;
+    margin-top: 80px;
+}
+
+section#billeterie .billet_type {
+    display: flex;
+    flex-direction: column;
+    justify-items: start;
+    align-items: start;
+    background-color: #27272A;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, .25);
+    padding: 30px;
+    cursor: pointer;
+    transition: background .25s ease-in-out;
+    border-radius: 10px;
+    width: 16vw;
+    height: 100%;
+}
+
+section#billeterie .billet_type:hover {
+    background-color: var(--color-background);
+}
+
+section#billeterie .billet_type h2 {
+    color: var(--color-blanc);
+    font-size: 1em;
+    font-weight: 500;
+    margin-block: 10px;
+}
+
+section#billeterie .billet_type p {
+    color: #A7A9BE;
+    font-size: 1em;
+    font-weight: 400;
+}
+
+section#billeterie .billet_type p:last-child {
+    margin-top: 10px;
+    color: var(--color-primary);
+    font-weight: 600;
 }
