--- a/style.css
+++ b/style.css
@@ -72,8 +72,7 @@ header .left {
     align-items: center;
 }
 
-header .left i {
-    font-size: 1.2em;
+header .left img {
     margin-right: 10px;
     color: var(--color-primary);
 }
@@ -111,6 +110,7 @@ header a.title {
 
 .nav_links li a.login {
     color: var(--color-primary);
+    white-space: nowrap;
 }
 
 .nav_links li a.signup {
@@ -134,6 +134,13 @@ section#billeterie {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+section#home,
+section#expo,
+section#personnel,
+section#contact {
+    min-height: 850px;
 }
 
 section#home h1 {
@@ -212,8 +219,7 @@ section#home .btn {
     justify-content: space-between;
 }
 
-.ads p i {
-    font-size: 1.4em;
+.ads p img {
     color: #C73A55;
     margin-right: 20px;
 }
@@ -301,12 +307,13 @@ section#expo .rectangle::before {
     content: '';
     position: absolute;
     height: 62vh;
+    min-height: 400px;
     width: 47vw;
     bottom: 0;
     right: 0;
-    /* background-image: url(); */
-    background: var(--color-blanc);
+    background-image: url(image_expo.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 8px;
 }
 
@@ -315,7 +322,7 @@ section#personnel h1 {
     font-size: 44px;
     font-weight: 900;
     line-height: 65px;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 }
 
 section#personnel .grid {
@@ -371,13 +378,14 @@ section#avis h1 {
     justify-content: center;
 }
 
-.row.col-avis {
-    align-items: start;
-    justify-content: center;
-}
-
-.column {
-    margin: 0;
+.gridAvis {
+    max-width: 100vw;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    justify-items: center;
+    align-items: center;
 }
 
 section#avis .card {
@@ -388,14 +396,19 @@ section#avis .card {
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, .2);
     padding: 20px;
-    margin: 12px 15px;
+    /* margin: 12px 15px; */
     color: var(--color-blanc);
     width: 25vw;
+    min-width: 400px;
 }
 
 section .pp {
-    width: 90px;
+    width: 40px;
     height: 40px;
+    max-width: 40px;
+    min-width: 40px;
+    max-height: 40px;
+    min-height: 40px;
     overflow: hidden;
     border-radius: 50px;
     box-sizing: border-box;
@@ -462,6 +475,7 @@ section#faq .question {
     align-items: center;
     justify-content: space-between;
     width: 50vw;
+    min-width: 700px;
     height: 60px;
     cursor: pointer;
     background-color: var(--color-background);
@@ -707,4 +721,108 @@ section#billeterie .billet_type p:last-child {
     font-weight: 600;
     height: 45px;
     margin-bottom: 0;
+}
+
+@media (max-height: 1000px) {
+
+    section#avis,
+    section#faq,
+    section#billeterie {
+        height: auto;
+        min-height: 1000px;
+    }
+
+    section#faq {
+        min-height: 800px;
+    }
+}
+
+@media (max-width: 1450px) {
+    .gridAvis {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 30px;
+        align-items: start;
+    }
+}
+
+@media (max-width: 1070px) {
+    header {
+        padding: 1.5% 5%;
+    }
+
+    .nav_links li {
+        padding-left: 5px;
+    }
+
+    section#home h1 {
+        font-size: 45px;
+        width: 60vw;
+        line-height: 50px;
+    }
+
+    section#home p.desc {
+        font-size: 20px;
+        line-height: 25px;
+        width: 50vw;
+        margin-top: 22px;
+    }
+
+    section#home .btn {
+        margin-top: 35px;
+        font-size: 15px;
+    }
+
+    section#expo {
+        padding-left: 7%;
+    }
+
+    section#expo h1 {
+        font-size: 35px;
+        line-height: 40px;
+    }
+
+    section#expo p.desc {
+        font-size: 18px;
+        line-height: 23px;
+        margin-top: 35px;
+    }
+
+    .column {
+        margin-right: 7%;
+        width: calc(100vw - 52vw - 7% - 7%);
+    }
+
+    section#personnel h1 {
+        font-size: 35px;
+        line-height: 40px;
+        margin-bottom: 80px;
+    }
+
+    section#personnel .grid .item h3 {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    section#personnel .grid .item p {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    section#avis h1 {
+        font-size: 35px;
+        line-height: 40px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 900px) {
+    section#avis h1 {
+        margin-top: 25px;
+    }
+    .gridAvis {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 25px;
+        align-items: start;
+        margin-bottom: 25px;
+    }
 }
