some responsive add

--- a/style.css
+++ b/style.css
@@ -67,17 +67,20 @@ header {
     border-bottom: 1.5px solid #11121c;
 }
 
-header .left {
+header .left,
+.header_responsive .left {
     display: flex;
     align-items: center;
 }
 
-header .left img {
+header .left img,
+.header_responsive .left img {
     margin-right: 10px;
     color: var(--color-primary);
 }
 
-header a.title {
+header a.title,
+.header_responsive a.title {
     font-size: 14px;
     color: var(--color-blanc);
     font-weight: 500;
@@ -119,6 +122,37 @@ header a.title {
 
 .nav_links li a:hover {
     color: var(--color-blanc);
+}
+
+/* responsive header */
+.header_responsive {
+    width: 100vw;
+    height: 60px;
+    display: none;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5% 10%;
+    background: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 999;
+    backdrop-filter: blur(35px);
+    border-bottom: 1.5px solid #11121c;
+}
+
+.menu_hamburger {
+    position: fixed;
+    top: 9px;
+    right: 10%;
+    font-size: 2.5em;
+    color: var(--color-blanc);
+    display: none;
+    visibility: hidden;
+    cursor: pointer;
+    z-index: 99999;
 }
 
 section#home,
@@ -815,14 +849,69 @@ section#billeterie .billet_type p:last-child {
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
     section#avis h1 {
         margin-top: 25px;
     }
+
     .gridAvis {
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 25px;
         align-items: start;
         margin-bottom: 25px;
     }
+
+    header {
+        flex-direction: column;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        margin-left: 100%;
+        padding-block: 70px 0;
+        transition: margin .35s ease-out;
+        z-index: 99999;
+        overflow-y: auto;
+        backdrop-filter: blur(45px);
+    }
+
+    .menu_hamburger_active {
+        /* menu hamburger visibilité */
+        margin-left: 0;
+    }
+
+    .menu_hamburger {
+        display: block;
+        visibility: visible;
+    }
+
+    .progress-container {
+        top: 0;
+    }
+
+    .header_responsive {
+        display: flex;
+        max-width: 100vw;
+        overflow: hidden;
+    }
+
+    header .left {
+        margin-bottom: 50px;
+    }
+
+    .nav_links {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav_links li {
+        margin-block: 15px;
+    }
+
+    .nav_links li a {
+        padding: 0 10px;
+    }
+
 }
