--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ section#billeterie {
     flex-direction: column;
 }
 
-section#home,
 section#expo,
 section#personnel,
 section#contact {
@@ -341,7 +340,7 @@ section#expo .rectangle::before {
     content: '';
     position: absolute;
     height: 62vh;
-    min-height: 400px;
+    min-height: 450px;
     width: 47vw;
     bottom: 0;
     right: 0;
@@ -357,6 +356,7 @@ section#personnel h1 {
     font-weight: 900;
     line-height: 65px;
     margin-bottom: 100px;
+    text-align: center;
 }
 
 section#personnel .grid {
@@ -557,9 +557,13 @@ section#faq .question p.date {
     width: 13%;
 }
 
-section#faq .question .pp {
-    width: 30px;
-    height: 30px;
+section#faq .pp {
+    width: 35px;
+    max-width: 35px;
+    min-width: 35px;
+    max-height: 35px;
+    min-height: 35px;
+    height: 35px;
     margin: 0;
 }
 
@@ -842,7 +846,8 @@ section#billeterie .billet_type p:last-child {
         line-height: 20px;
     }
 
-    section#avis h1 {
+    section#avis h1,
+    section#faq h1 {
         font-size: 35px;
         line-height: 40px;
         margin-bottom: 30px;
@@ -914,4 +919,325 @@ section#billeterie .billet_type p:last-child {
         padding: 0 10px;
     }
 
+    .nav_links:nth-child(3) {
+        margin-left: 0;
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 750px) {
+    section#faq {
+        padding-block: 25px;
+    }
+
+    section#faq .question {
+        width: 80vw;
+        min-width: 300px;
+        height: 75px;
+        padding: 0 15px;
+    }
+
+    section#faq .question p {
+        font-size: 13px;
+        line-height: 16px;
+    }
+
+    section#faq .question p.title {
+        width: 40%;
+    }
+
+    section#faq .question p.subject,
+    section#faq .question p.date {
+        width: 10%;
+    }
+
+    section#faq .btn {
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 650px) {
+    section#home h1 {
+        font-size: 40px;
+        width: 70vw;
+        line-height: 45px;
+    }
+
+    section#home p.desc {
+        font-size: 18px;
+        line-height: 24px;
+        width: 60vw;
+    }
+
+    section#expo {
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 0;
+        padding-block: 25px;
+    }
+
+    section#expo .column {
+        margin-right: 0;
+        width: 75vw;
+        align-items: center;
+    }
+
+    section#expo .column h1,
+    section#personnel h1,
+    section#avis h1,
+    section#faq h1 {
+        text-align: center;
+        font-size: 30px;
+        line-height: 35px;
+    }
+
+    section#expo .rectangle {
+        min-height: 400px;
+        width: 75vw;
+        margin-top: 45px;
+    }
+
+    section#expo .rectangle::before {
+        height: 62vh;
+        min-height: 350px;
+        width: 70vw;
+    }
+
+    section#personnel .grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 35px;
+        margin-inline: 5%;
+    }
+
+    section#personnel .grid .item {
+        width: 22vw;
+    }
+
+    section#avis .card {
+        padding: 15px;
+        width: 80vw;
+        min-width: 270px;
+        max-width: 450px;
+    }
+
+    section#avis .card .column {
+        width: 100%;
+    }
+
+    section#avis .card p.nom {
+        font-size: .9em;
+    }
+
+    section#avis .card p.aro,
+    section#avis .card p.date {
+        font-size: .85em;
+    }
+
+    section#avis .card p.message {
+        line-height: 1.4;
+        font-size: .85em;
+    }
+
+    section#faq .question p {
+        font-size: .8em;
+        line-height: 1.3;
+    }
+
+    section#faq .question {
+        width: 90vw;
+        height: 80px;
+    }
+
+    section#faq .question p.title {
+        width: 55%;
+    }
+
+    section#faq .question p.subject {
+        width: 25%;
+    }
+
+    section#faq .question p.date {
+        width: 20%;
+    }
+
+    section#faq .btn {
+        margin-top: 30px;
+    }
+
+    .btn {
+        padding: 10px 15px;
+        border-radius: 60px;
+        font-size: .95em;
+    }
+
+    .btn i {
+        font-size: .9em;
+    }
+}
+
+@media (max-width: 500px) {
+    .menu_hamburger {
+        top: 13px;
+        right: 5%;
+        font-size: 2em;
+    }
+
+    .ads {
+        padding: 10px 15px;
+        height: 45px;
+        width: 85vw;
+    }
+
+    .ads p {
+        font-size: .85em;
+    }
+
+    .ads p img {
+        margin-right: 15px;
+        width: 22px;
+        height: 22px;
+    }
+
+    .ads hr {
+        margin-inline: 10px;
+    }
+
+    .ads a {
+        font-size: .85em;
+    }
+
+    .ads a i {
+        font-size: 1.05em;
+        margin-left: 5px;
+    }
+
+    section#home h1 {
+        font-size: 30px;
+        width: 80vw;
+        line-height: 1.2;
+        margin-block: 15px;
+    }
+
+    section#home p.desc {
+        font-size: 15px;
+        line-height: 1.25;
+        width: 70vw;
+    }
+
+    section#expo .column h1,
+    section#personnel h1,
+    section#avis h1,
+    section#faq h1 {
+        text-align: center;
+        font-size: 23px;
+        line-height: 1.3;
+        margin-inline: 5px;
+    }
+
+    section#expo .column {
+        width: 85vw;
+    }
+
+    section#expo p.desc {
+        font-size: 14px;
+        line-height: 1.4;
+        margin-block: 40px 10px;
+    }
+
+    section#expo .rectangle {
+        min-height: auto;
+        height: 250px;
+        width: 85vw;
+        margin-top: 45px;
+    }
+
+    section#expo .rectangle::before {
+        height: 220px;
+        min-height: auto;
+        width: 78vw;
+    }
+
+    section#personnel .grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 50px;
+        margin-inline: 10%;
+    }
+
+    section#personnel .grid .item {
+        width: 100%;
+    }
+
+    section#avis .card {
+        padding: 10px 20px;
+        width: 70vw;
+        max-width: auto;
+    }
+
+    section#avis .card .column {
+        width: 100%;
+    }
+
+    section#avis .card p.nom {
+        font-size: .85em;
+    }
+
+    section#avis .card p.aro,
+    section#avis .card p.date {
+        font-size: .8em;
+    }
+
+    section#avis .card p.message {
+        line-height: 1.25;
+        font-size: .8em;
+        max-width: 100%;
+    }
+
+    section#avis .card .pp {
+        display: none;
+    }
+
+    section#faq .question {
+        width: 90vw;
+        height: 80px;
+    }
+
+    section#faq .question p {
+        font-size: .75em;
+        line-height: 1.25;
+    }
+
+    section#faq .question p.title {
+        width: 65%;
+    }
+
+    section#faq .question p.subject {
+        display: none;
+    }
+
+    section#faq .question p.date {
+        width: 20%;
+    }
+
+    section#faq .pp {
+        width: 25px;
+        max-width: 25px;
+        min-width: 25px;
+        max-height: 25px;
+        min-height: 25px;
+        height: 25px;
+        margin: 0;
+    }
+
+    section#faq .btn {
+        margin-top: 20px;
+    }
+
+    .btn {
+        padding: 8px 12px;
+        font-size: .85em;
+    }
+
+    .btn i {
+        font-size: .9em;
+    }
 }
