border radius update rectangle image

--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ section#expo .rectangle::before {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 8px;
+    border-bottom-right-radius: inherit;
 }
 
 section#personnel h1 {
@@ -1204,7 +1205,9 @@ section#billeterie .billet_type p:last-child {
 
     section#faq .question {
         width: 90vw;
-        height: 80px;
+        height: auto;
+        min-height: 50px;
+        padding: 15px;
     }
 
     section#faq .question p {
