--- a/style.css
+++ b/style.css
@@ -171,8 +171,7 @@ section#billeterie {
 }
 
 section#expo,
-section#personnel,
-section#contact {
+section#personnel {
     min-height: 850px;
 }
 
@@ -580,18 +579,19 @@ section#faq .btn:hover {
 
 section#contact {
     flex-direction: row;
+    min-height: 670px;
 }
 
 section#contact .row {
     align-items: start;
-    width: 55vw;
-    justify-content: space-between;
+    width: 80%;
+    justify-content: space-around;
 }
 
 section#contact h1 {
     color: var(--color-blanc);
     font-size: 35px;
-    font-weight: 600;
+    font-weight: 900;
     line-height: 44px;
     letter-spacing: -.6px;
     white-space: nowrap;
@@ -606,6 +606,8 @@ section#contact form {
     border-radius: 10px;
     border: #3c3c3c 1px solid;
     width: 45%;
+    min-width: 300px;
+    max-width: 430px;
 }
 
 section#contact form .top {
@@ -961,6 +963,10 @@ section#billeterie .billet_type p:last-child {
     section#faq .btn {
         margin-top: 40px;
     }
+
+    section#contact .row {
+        width: 90%;
+    }
 }
 
 @media (max-width: 650px) {
@@ -992,7 +998,8 @@ section#billeterie .billet_type p:last-child {
     section#expo .column h1,
     section#personnel h1,
     section#avis h1,
-    section#faq h1 {
+    section#faq h1,
+    section#contact h1 {
         text-align: center;
         font-size: 30px;
         line-height: 35px;
@@ -1080,6 +1087,21 @@ section#billeterie .billet_type p:last-child {
     .btn i {
         font-size: .9em;
     }
+
+    section#contact .row {
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    section#contact h1 {
+        margin-bottom: 30px;
+    }
+
+    section#contact form {
+        width: 60%;
+    }
 }
 
 @media (max-width: 500px) {
@@ -1134,7 +1156,8 @@ section#billeterie .billet_type p:last-child {
     section#expo .column h1,
     section#personnel h1,
     section#avis h1,
-    section#faq h1 {
+    section#faq h1,
+    section#contact h1 {
         text-align: center;
         font-size: 23px;
         line-height: 1.3;
@@ -1248,5 +1271,47 @@ section#billeterie .billet_type p:last-child {
 
     .btn i {
         font-size: .9em;
+    }
+
+    section#contact .row {
+        width: 100%;
+    }
+
+    section#contact form {
+        min-width: 250px;
+    }
+
+    section#contact form .top {
+        padding: 12px 18px;
+    }
+
+    section#contact form .top h2 {
+        font-size: 13px;
+        text-align: center;
+    }
+
+    section#contact form .content {
+        padding: 18px;
+    }
+
+    section#contact form .content label {
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+
+    section#contact form .content input,
+    section#contact form .content textarea {
+        font-size: 12px;
+        padding: 9px;
+        margin-bottom: 18px;
+    }
+
+    section#contact form .content .row p {
+        font-size: 11px;
+        line-height: 15px;
+    }
+
+    section#contact form .content input.btn {
+        margin-top: 18px;
     }
 }
