responsive billeterie add

--- a/style.css
+++ b/style.css
@@ -711,6 +711,7 @@ section#billeterie h1 {
     font-weight: 900;
     line-height: 55px;
     text-align: center;
+    margin-bottom: 80px;
 }
 
 section#billeterie .billet {
@@ -720,7 +721,6 @@ section#billeterie .billet {
     grid-gap: 25px;
     justify-items: center;
     align-items: center;
-    margin-top: 80px;
 }
 
 section#billeterie .billet_type {
@@ -735,6 +735,7 @@ section#billeterie .billet_type {
     transition: background .25s ease-in-out;
     border-radius: 10px;
     width: 16vw;
+    min-width: 250px;
     height: 100%;
 }
 
@@ -773,8 +774,7 @@ section#billeterie .billet_type p:last-child {
 
     section#avis,
     section#faq,
-    section#billeterie,
-    section#contact {
+    section#billeterie {
         height: auto;
         min-height: 1000px;
     }
@@ -844,7 +844,8 @@ section#billeterie .billet_type p:last-child {
         width: calc(100vw - 52vw - 7% - 7%);
     }
 
-    section#personnel h1 {
+    section#personnel h1,
+    section#billeterie h1 {
         font-size: 35px;
         line-height: 40px;
         margin-bottom: 80px;
@@ -937,6 +938,16 @@ section#billeterie .billet_type p:last-child {
         margin-left: 0;
         margin-top: 30px;
     }
+
+    section#billeterie .billet {
+        grid-gap: 20px;
+    }
+
+    section#billeterie .billet_type {
+        padding: 22px;
+        width: 27vw;
+        min-width: 200px;
+    }
 }
 
 @media (max-width: 750px) {
@@ -972,6 +983,27 @@ section#billeterie .billet_type p:last-child {
     section#contact .row {
         width: 90%;
     }
+
+    section#billeterie {
+        height: auto;
+        padding-block: 100px 25px;
+    }
+
+    section#billeterie h1 {
+        margin-bottom: 50px;
+    }
+
+    section#billeterie .billet {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 25px;
+    }
+
+    section#billeterie .billet_type {
+        padding: 25px;
+        width: 35vw;
+        min-width: 200px;
+    }
 }
 
 @media (max-width: 650px) {
@@ -1004,7 +1036,8 @@ section#billeterie .billet_type p:last-child {
     section#personnel h1,
     section#avis h1,
     section#faq h1,
-    section#contact h1 {
+    section#contact h1,
+    section#billeterie h1 {
         text-align: center;
         font-size: 30px;
         line-height: 35px;
@@ -1107,6 +1140,22 @@ section#billeterie .billet_type p:last-child {
     section#contact form {
         width: 60%;
     }
+
+    section#billeterie .billet_type h2 {
+        font-size: .95em;
+    }
+
+    section#billeterie .billet_type p {
+        font-size: .95em;
+        margin-block: 12px;
+    }
+
+    section#billeterie .billet_type p:last-child {
+        margin-top: auto;
+        height: auto;
+        margin-bottom: 0;
+        font-size: 1.05em;
+    }
 }
 
 @media (max-width: 500px) {
@@ -1162,7 +1211,8 @@ section#billeterie .billet_type p:last-child {
     section#personnel h1,
     section#avis h1,
     section#faq h1,
-    section#contact h1 {
+    section#contact h1,
+    section#billeterie h1 {
         text-align: center;
         font-size: 23px;
         line-height: 1.3;
@@ -1318,5 +1368,42 @@ section#billeterie .billet_type p:last-child {
 
     section#contact form .content input.btn {
         margin-top: 18px;
+    }
+
+    section#billeterie {
+        height: auto;
+        padding-block: 80px 20px;
+    }
+
+    section#billeterie h1 {
+        margin-bottom: 30px;
+    }
+
+    section#billeterie .billet {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-gap: 20px;
+    }
+
+    section#billeterie .billet_type {
+        padding: 20px;
+        width: 70vw;
+        max-width: 270px;
+        min-width: 240px;
+    }
+
+    section#billeterie .billet_type h2 {
+        font-size: .9em;
+    }
+
+    section#billeterie .billet_type p {
+        font-size: .9em;
+        margin-block: 18px;
+    }
+
+    section#billeterie .billet_type p:last-child {
+        margin-top: auto;
+        margin-bottom: 0;
+        font-size: .95em;
     }
 }
