--- a/style.css
+++ b/style.css
@@ -702,7 +702,7 @@ section#contact form .content input.btn:hover {
 }
 
 section#billeterie {
-    background-color: var(--color-background2); 
+    background-color: var(--color-background2);
 }
 
 section#billeterie h1 {
@@ -787,7 +787,6 @@ section#billeterie .billet_type p:last-child {
         height: auto;
         min-height: 100vh;
         padding-top: 35px;
-        align-items: start;
     }
 
     section#billeterie {
@@ -795,6 +794,12 @@ section#billeterie .billet_type p:last-child {
         min-height: 100vh;
         padding-block: 100px 50px;
         /* min-height: 1000px; */
+    }
+}
+
+@media (max-height: 1000px) and (max-width: 650px) {
+    section#contact {
+        align-items: start;
     }
 }
 
